# challange-bot

./: .gitignore  LICENSE  README.MD  architecture.md  docker-compose.yml  dockerfile  env.example  pyproject.toml  requirements.txt
.cursor/: project-structure.mdc
.github/: copilot-instructions.md
app/: __init__.py  main.py
app/bot/: __init__.py  formatting.py  handlers.py  media_assets.py  media_send.py  messages.py  scheduler.py
app/core/: __init__.py  config.py  models.py  scoring.py
app/storage/: PRODUCTION_MIGRATION_SETUP.md  __init__.py  mg_postgre_init.sql  migrations.py  migrations.sql  migrations_v2.sql  pg_repo.py  repo.py  sqlite_repo.py
app/storage/migrations/: 001_initial_schema_postgres.sql  001_initial_schema_sqlite.sql  002_add_language_column_postgres.sql  002_add_language_column_sqlite.sql  README.md  setup_production_migration_log_postgres.sql  setup_production_migration_log_sqlite.sql
